--- a/src/blocks/catalog-sidebar/catalog-sidebar.twig
+++ b/src/blocks/catalog-sidebar/catalog-sidebar.twig
@@ -1,5 +1,5 @@
 <div class="catalog-sidebar col-xl-3">
-	<div class="catalog-sort__first row">
+	<div class="catalog-sort__first">
 		<span class="catalog-sort__btn col-12">Каталог</span>
 	</div>
 	<ul class="catalog-sidebar__list">
@@ -8,7 +8,7 @@
 			<span>компрессионный трикотаж</span>
 			{% include 'assets/img/arrod-down.svg' %}
 		</li>
-		<li class="catalog-sidebar__toggle">
+		<li class="catalog-sidebar__toggle" style="display: none;">
 			<ul class="catalog-sidebar__toggle-list">
 				<li class="catalog-sidebar__toggle-item">
 					<a href="#">1 класс, 2 класс</a>
@@ -23,7 +23,7 @@
 			<span>ортопедические изделия</span>
 			{% include 'assets/img/arrod-down.svg' %}
 		</li>
-		<li class="catalog-sidebar__toggle">
+		<li class="catalog-sidebar__toggle" style="display: none;">
 			<ul class="catalog-sidebar__toggle-list">
 				<li class="catalog-sidebar__toggle-item">
 					<a href="#">бандажи</a>
@@ -56,7 +56,7 @@
 			<span>товары после мастэктомии</span>
 			{% include 'assets/img/arrod-down.svg' %}
 		</li>
-		<li class="catalog-sidebar__toggle">
+		<li class="catalog-sidebar__toggle" style="display: none;">
 			<ul class="catalog-sidebar__toggle-list">
 				<li class="catalog-sidebar__toggle-item">
 					<a href="#">купальники</a>
@@ -76,7 +76,7 @@
 			</a>
 		</li>
 		<li class="catalog-sidebar__item">
-			<a href="#" class="catalog-sidebar__noEvent active">
+			<a href="#" class="catalog-sidebar__noEvent _active">
 				{% include 'assets/img/shoe.svg' %}
 				<span>ортопедическая обувь</span>
 			</a>
