--- a/src/blocks/g-tabs-border/g-tabs-border.twig
+++ b/src/blocks/g-tabs-border/g-tabs-border.twig
@@ -51,7 +51,7 @@
 		</div>
 		<p class="g-tabs__content-descr">Специальные технологии вязки поддерживают оптимальный водный и температурный балансы кожи. Серебро в структуре нитей обеспечивает антибактериальный и антигрибковый эффекты в носочной части и борется с возникновением неприятного запаха. Трикотаж хорошо растягивается в продольном и поперечном направлениях, что позволяет добиться правильного распределения изделия на ноге, а также лёгкости его надевания и снимания без образования складок.</p>
 	</div>
-	<div class="g-tabs__content" data-tab="2">
+	<div class="g-tabs__content mb-5" data-tab="2">
 		<div class="g-tabs-border__flex">
 			<a href="#" class="g-tabs-border__flex-link" download>
 				{% include 'assets/img/pdf.svg' %}
