--- a/src/layouts/dop-lay.twig
+++ b/src/layouts/dop-lay.twig
@@ -24,6 +24,6 @@
 	{% block page %}{% endblock %}
 	{% include "blocks/footer/footer.twig" %}
 	{% include 'blocks/g-popup/g-popup.twig'  %}
-	<script type="text/javascript" src="./main.min.js" defer="" async=""></script>
+	<script type="text/javascript" src="./main.min.js?2" defer="" async=""></script>
 </body>
 </html>
