--- a/src/blocks/catalog-item/catalog-item.scss
+++ b/src/blocks/catalog-item/catalog-item.scss
@@ -4,7 +4,7 @@
 	position: relative;
 	// padding: 3px 35px 30px;
 	padding-bottom: 30px;
-	box-shadow: 0px 7px 1px rgba(83, 83, 83, 0.25);
+	box-shadow: 0px 5px 1px rgba(83, 83, 83, 0.25);
 	border: 0.5px solid #9D9D9D;
 	background: #FFFFFF;
 	border-radius: 35px;
@@ -51,10 +51,10 @@
 		display: block;
 		position: absolute;
 		left: 0;
-		top: 38px;
+		top: 30px;
 		background: #FF5D03;
-		height: 45px;
-		line-height: 45px;
+		height: 48px;
+		line-height: 48px;
 		font-weight: normal;
 		font-size: 16px;
 		text-align: center;
@@ -67,8 +67,8 @@
 	{
 		display: block;
 		font-weight: bold;
-		font-size: 24px;
-		line-height: 33px;
+		font-size: 19px;
+		line-height: 1.3;
 		text-decoration-line: line-through;
 		color: #9D9D9D;
 		margin-right: 10px;
@@ -103,13 +103,13 @@
 		display: flex;
 		align-items: center;
 		position: absolute;
-		top: 33px;
-		right: 15px;
+		top: 30px;
+		right: 1rem;
 		margin-bottom: 15px;
 		.catalog-item__head-btn
 		{
-			width: 60px;
-			height: 60px;
+			width: 48px;
+			height: 48px;
 			border:0;
 			background: #C4C4C4;
 			box-shadow: 0px 4px 4px rgba(170, 170, 170, 0.25);
@@ -149,8 +149,8 @@
 {
 	display: block;
 	font-weight: normal;
-	font-size: 18px;
-	line-height: 25px;
+	font-size: 14px;
+	line-height: 1.3;
 	text-align: center;
 	color: #828181;
 	margin-bottom: 15px;
@@ -161,8 +161,8 @@
 	align-items: center;
 	text-align: center;
 	font-weight: bold;
-	font-size: 18px;
-	line-height: 25px;
+	font-size: 13px;
+	line-height: 1.3;
 	text-decoration-line: underline;
 	color: #828181;
 	margin-bottom: 15px;
@@ -187,8 +187,8 @@
 	align-items: center;
 	justify-content: center;
 	font-weight: bold;
-	font-size: 24px;
-	line-height: 33px;
+	font-size: 19px;
+	line-height: 1.3;
 	text-align: center;
 	color: #424242;
 	margin-bottom: 25px;
@@ -196,8 +196,8 @@
 .catalog-item__text
 {
 	font-weight: 600;
-	font-size: 18px;
-	line-height: 25px;
+	font-size: 14px;
+	line-height: 1.3;
 	text-align: center;
 	color: #424242;
 	margin-bottom: 25px;
@@ -226,13 +226,13 @@
 }
 .catalog-item__btn
 {
-	width: 100%;
 	background: #89AFCE;
 	border-radius: 50px;
-	height: 60px;
-	line-height: 60px;
+	height: 48px;
+	line-height: 48px;
+	padding: 0 35px;
 	font-weight: normal;
-	font-size: 18px;
+	font-size: 14px;
 	color: #FFFFFF;
 	text-align: center;
 	border:0;
