--- a/src/detail.twig
+++ b/src/detail.twig
@@ -8,7 +8,9 @@
 		<h2 class="about__title">Вы смотрели ранее</h2>
 		<div class="catalog-list row">
 			{% for item in 0..3 %}
+			<div class="catalog-item-wrapper col-md-6 col-lg-4 col-xl-3">
 				{% include '/blocks/catalog-item/catalog-item.twig' %}
+			</div>
 			{% endfor %}
 		</div>
 		{% include '/blocks/detail-information-popup/detail-information-popup.twig' %}
