таблица размеров в карточке товара

--- a/src/blocks/detail-information-popup/detail-information-popup.twig
+++ b/src/blocks/detail-information-popup/detail-information-popup.twig
@@ -1,166 +1,170 @@
 <div class="detail-information-popup" style="display:none">
-	<div class="detail-information-popup__content  _popup-content">
-		<div class="detail-information-popup__content-close" onclick="pegas.gPopup.close()">
-			{% include 'assets/img/close.svg' %}
-		</div>
-		<h2 class="detail-information-popup__title">КАК ПРАВИЛЬНО ПОДОБРАТЬ РАЗМЕР КОМПРЕССИОННОГО ТРИКОТАЖА</h2>
-		<div class="detail-information-popup__flex">
-			<ul class="detail-information-popup__list">
-				<li class="detail-information-popup__item">Размер изделия подбирается по индивидуальным меркамконечности. Верхний край лечебного трикотажа должен располагаться на 5-10 см выше уровня поражения вены</li>
-				<li class="detail-information-popup__item">При склонности к отекам необходимо производть измерения утром, сразу после пробуждения.</li>
-				<li class="detail-information-popup__item">
-					<a href="#">Самой главной меркой для подбора данного изделия является мерка b.</a>
-				</li>
-				<li class="detail-information-popup__item">
-					<span>g</span> - длина окружности бедра, на 5 см ниже промежности
-				</li>
-				<li class="detail-information-popup__item">
-					<span>d</span> - длина окружности голени ниже подколенной складки на ширину двух пальцеы
-				</li>
-				<li class="detail-information-popup__item">
-					<span>с</span> - длина окружности самой широкой голени
-				</li>
-				<li class="detail-information-popup__item">
-					<span>b</span> - длина окружности самой узкой части голени над лодыжками
-				</li>
-				<li class="detail-information-popup__item">
-					<span>AG</span> - длина от пятки до измерения g
-				</li>
-			</ul>
-			<img src="img/info-pop.png" alt="">
-		</div>
-		<div class="detail-information-popup__tables">
-			<div class="detail-information-popup__table" cellspacing="0" cellpadding="0">
-				<div class="detail-information-popup__tr">
-					<div class="detail-information-popup__td detail-information-popup__head">
-						<span>РАЗМЕР</span>
-						<span>МЕРКА</span>
-					</div>
-					<div class="detail-information-popup__td detail-information-popup__td--center">
-						S
-					</div>
-					<div class="detail-information-popup__td detail-information-popup__td--center">
-						M
-					</div>
-					<div class="detail-information-popup__td detail-information-popup__td--center">
-						L
-					</div>
-					<div class="detail-information-popup__td detail-information-popup__td--center">
-						XL
-					</div>
-					<div class="detail-information-popup__td detail-information-popup__td--center">
-						XXL
-					</div>
-				</div>
-				<div class="detail-information-popup__tr detail-information-popup__tr--first">
-					<div class="detail-information-popup__td detail-information-popup__td--first">
-						g, для чулок с резинкой на силиконовой основе
-					</div>
-					<div class="detail-information-popup__td-last">
-						47 - 54
-					</div>
-					<div class="detail-information-popup__td-last">
-						52 - 60
-					</div>
-					<div class="detail-information-popup__td-last">
-						56 - 65
-					</div>
-					<div class="detail-information-popup__td-last">
-						62 - 72
-					</div>
-					<div class="detail-information-popup__td-last">
-						65 - 76
-					</div>
-				</div>
-				<div class="detail-information-popup__tr">
-					<div class="detail-information-popup__td detail-information-popup__td--first">
-						g, для чулок с трикотажной резинкой
-					</div>
-					<div class="detail-information-popup__td-last">
-						42 - 57
-					</div>
-					<div class="detail-information-popup__td-last">
-						52 - 60
-					</div>
-					<div class="detail-information-popup__td-last">
-						48 - 64
-					</div>
-					<div class="detail-information-popup__td-last">
-						54 - 71
-					</div>
-					<div class="detail-information-popup__td-last">
-						60 - 78
-					</div>
-				</div>
-				<div class="detail-information-popup__tr detail-information-popup__tr--first">
-					<div class="detail-information-popup__td detail-information-popup__td--first">
-						d, см
-					</div>
-					<div class="detail-information-popup__td-last">
-						27 - 33
-					</div>
-					<div class="detail-information-popup__td-last">
-						31 - 37
-					</div>
-					<div class="detail-information-popup__td-last">
-						35 - 41
-					</div>
-					<div class="detail-information-popup__td-last">
-						39 - 45
-					</div>
-					<div class="detail-information-popup__td-last">
-						41 - 49
-					</div>
-				</div>
-				<div class="detail-information-popup__tr">
-					<div class="detail-information-popup__td detail-information-popup__td--first">
-						с, см
-					</div>
-					<div class="detail-information-popup__td-last">
-						28 - 34
-					</div>
-					<div class="detail-information-popup__td-last">
-						32 - 38
-					</div>
-					<div class="detail-information-popup__td-last">
-						36 - 42
-					</div>
-					<div class="detail-information-popup__td-last">
-						40 - 46
-					</div>
-					<div class="detail-information-popup__td-last">
-						42 - 50
-					</div>
-				</div>
-				<div class="detail-information-popup__tr detail-information-popup__tr--first">
-					<div class="detail-information-popup__td detail-information-popup__td--first">
-						d, см
-					</div>
-					<div class="detail-information-popup__td-last">
-						19 - 21
-					</div>
-					<div class="detail-information-popup__td-last">
-						22 - 24
-					</div>
-					<div class="detail-information-popup__td-last">
-						25 - 27
-					</div>
-					<div class="detail-information-popup__td-last">
-						28 - 30
-					</div>
-					<div class="detail-information-popup__td-last">
-						30 - 32
-					</div>
+	<div class="container">
+		<div class="detail-information-popup__content  _popup-content">
+			<div class="detail-information-popup__content-close" onclick="pegas.gPopup.close()">
+				{% include 'assets/img/close.svg' %}
+			</div>
+			<h2 class="detail-information-popup__title">КАК ПРАВИЛЬНО ПОДОБРАТЬ РАЗМЕР КОМПРЕССИОННОГО ТРИКОТАЖА</h2>
+			<div class="detail-information-popup__flex row">
+				<ul class="detail-information-popup__list col-lg-7">
+					<li class="detail-information-popup__item">Размер изделия подбирается по индивидуальным меркамконечности. Верхний край лечебного трикотажа должен располагаться на 5-10 см выше уровня поражения вены</li>
+					<li class="detail-information-popup__item">При склонности к отекам необходимо производть измерения утром, сразу после пробуждения.</li>
+					<li class="detail-information-popup__item">
+						<a href="#">Самой главной меркой для подбора данного изделия является мерка b.</a>
+					</li>
+					<li class="detail-information-popup__item">
+						<span>g</span> - длина окружности бедра, на 5 см ниже промежности
+					</li>
+					<li class="detail-information-popup__item">
+						<span>d</span> - длина окружности голени ниже подколенной складки на ширину двух пальцеы
+					</li>
+					<li class="detail-information-popup__item">
+						<span>с</span> - длина окружности самой широкой голени
+					</li>
+					<li class="detail-information-popup__item">
+						<span>b</span> - длина окружности самой узкой части голени над лодыжками
+					</li>
+					<li class="detail-information-popup__item">
+						<span>AG</span> - длина от пятки до измерения g
+					</li>
+				</ul>
+				<div class="col-lg-5">
+					<img src="img/info-pop.png" alt="" class="img-fluid">
 				</div>
 			</div>
-			<div class="detail-information-popup__size">
-				<div class="detail-information-popup__size-top">
-					ДЛИНА, СМ
+			<div class="detail-information-popup__tables row">
+				<div class="detail-information-popup__table col-lg-8" cellspacing="0" cellpadding="0">
+					<div class="detail-information-popup__tr">
+						<div class="detail-information-popup__td detail-information-popup__head">
+							<span>РАЗМЕР</span>
+							<span>МЕРКА</span>
+						</div>
+						<div class="detail-information-popup__td detail-information-popup__td--center">
+							S
+						</div>
+						<div class="detail-information-popup__td detail-information-popup__td--center">
+							M
+						</div>
+						<div class="detail-information-popup__td detail-information-popup__td--center">
+							L
+						</div>
+						<div class="detail-information-popup__td detail-information-popup__td--center">
+							XL
+						</div>
+						<div class="detail-information-popup__td detail-information-popup__td--center">
+							XXL
+						</div>
+					</div>
+					<div class="detail-information-popup__tr detail-information-popup__tr--first">
+						<div class="detail-information-popup__td detail-information-popup__td--first">
+							g, для чулок с резинкой на силиконовой основе
+						</div>
+						<div class="detail-information-popup__td-last">
+							47 - 54
+						</div>
+						<div class="detail-information-popup__td-last">
+							52 - 60
+						</div>
+						<div class="detail-information-popup__td-last">
+							56 - 65
+						</div>
+						<div class="detail-information-popup__td-last">
+							62 - 72
+						</div>
+						<div class="detail-information-popup__td-last">
+							65 - 76
+						</div>
+					</div>
+					<div class="detail-information-popup__tr">
+						<div class="detail-information-popup__td detail-information-popup__td--first">
+							g, для чулок с трикотажной резинкой
+						</div>
+						<div class="detail-information-popup__td-last">
+							42 - 57
+						</div>
+						<div class="detail-information-popup__td-last">
+							52 - 60
+						</div>
+						<div class="detail-information-popup__td-last">
+							48 - 64
+						</div>
+						<div class="detail-information-popup__td-last">
+							54 - 71
+						</div>
+						<div class="detail-information-popup__td-last">
+							60 - 78
+						</div>
+					</div>
+					<div class="detail-information-popup__tr detail-information-popup__tr--first">
+						<div class="detail-information-popup__td detail-information-popup__td--first">
+							d, см
+						</div>
+						<div class="detail-information-popup__td-last">
+							27 - 33
+						</div>
+						<div class="detail-information-popup__td-last">
+							31 - 37
+						</div>
+						<div class="detail-information-popup__td-last">
+							35 - 41
+						</div>
+						<div class="detail-information-popup__td-last">
+							39 - 45
+						</div>
+						<div class="detail-information-popup__td-last">
+							41 - 49
+						</div>
+					</div>
+					<div class="detail-information-popup__tr">
+						<div class="detail-information-popup__td detail-information-popup__td--first">
+							с, см
+						</div>
+						<div class="detail-information-popup__td-last">
+							28 - 34
+						</div>
+						<div class="detail-information-popup__td-last">
+							32 - 38
+						</div>
+						<div class="detail-information-popup__td-last">
+							36 - 42
+						</div>
+						<div class="detail-information-popup__td-last">
+							40 - 46
+						</div>
+						<div class="detail-information-popup__td-last">
+							42 - 50
+						</div>
+					</div>
+					<div class="detail-information-popup__tr detail-information-popup__tr--first">
+						<div class="detail-information-popup__td detail-information-popup__td--first">
+							d, см
+						</div>
+						<div class="detail-information-popup__td-last">
+							19 - 21
+						</div>
+						<div class="detail-information-popup__td-last">
+							22 - 24
+						</div>
+						<div class="detail-information-popup__td-last">
+							25 - 27
+						</div>
+						<div class="detail-information-popup__td-last">
+							28 - 30
+						</div>
+						<div class="detail-information-popup__td-last">
+							30 - 32
+						</div>
+					</div>
 				</div>
-				<div class="detail-information-popup__size-bot">
-					<h2 class="detail-information-popup__size-name">AG ДЛЯ ЧУЛОК</h2>
-					<p>стандартная   72 - 83</p>
-					<p>малая 62 - 71</p>
+				<div class="detail-information-popup__size col-lg-4">
+					<div class="detail-information-popup__size-top">
+						ДЛИНА, СМ
+					</div>
+					<div class="detail-information-popup__size-bot">
+						<h2 class="detail-information-popup__size-name">AG ДЛЯ ЧУЛОК</h2>
+						<p>стандартная   72 - 83</p>
+						<p>малая 62 - 71</p>
+					</div>
 				</div>
 			</div>
 		</div>
