--- a/src/blocks/detail-information-popup/detail-information-popup.scss
+++ b/src/blocks/detail-information-popup/detail-information-popup.scss
@@ -2,17 +2,17 @@
 {
 	width: 100%;
 	position: relative;
-	padding: 110px 0px 110px 150px;
+	padding: 60px 60px 60px 80px;
 	background: white;
-	height: 600px;
+	height: 90vh;
 	overflow: hidden;
 	overflow-y: scroll;
 }
 .detail-information-popup__content-close
 {
 	position: absolute;
-	top: 111px;
-	right: 158px;
+	top: 60px;
+	right: 80px;
 	svg
 	{
 		path
@@ -24,12 +24,12 @@
 .detail-information-popup__title
 {
 	font-weight: 500;
-	font-size: 30px;
+	font-size: 24px;
 	line-height: 150%;
 	text-transform: uppercase;
 	color: #424242;
 	margin: 0;
-	margin-bottom: 60px;
+	margin-bottom: 30px;
 }
 .detail-information-popup__flex
 {
@@ -43,17 +43,17 @@
 .detail-information-popup__item
 {
 	font-weight: normal;
-	font-size: 30px;
+	font-size: 18px;
 	line-height: 150%;
 	color: #424242;
 	&:not(:last-child)
 	{
-		margin-bottom: 40px;
+		margin-bottom: 20px;
 	}
 	a
 	{
 		font-weight: 600;
-		font-size: 30px;
+		font-size: 18px;
 		line-height: 150%;
 		color: #89AFCE;
 	}
@@ -66,7 +66,6 @@
 {
 	display: flex;
 	justify-content: space-between;
-	padding-right: 150px;
 }
 .detail-information-popup__table
 {
@@ -81,7 +80,7 @@ div.detail-information-popup__head
 	width: 390px;
 	line-height: 33px;
 	padding: 0 22px;
-	padding-top: 26px;
+	padding-top: 7px;
 	span
 	{
 		display: block;
@@ -93,16 +92,16 @@ div.detail-information-popup__head
 {
 	display: flex;
 	align-items: center;
-	&:not(:last-child){margin-bottom: 20px;}
+	&:not(:last-child){margin-bottom: 10px;}
 }
 .detail-information-popup__td
 {
 	font-family: $second-font;
 	font-weight: 600;
-	font-size: 30px;
-	line-height: 121px;
+	font-size: 18px;
+	line-height: 72px;
 	color: #FFFFFF;
-	height: 121px;
+	height: 72px;
 	width: 137px;
 	background-color: #89AFCE;
 }
@@ -113,10 +112,10 @@ div.detail-information-popup__head
 div.detail-information-popup__td--first
 {
 	font-weight: bold;
-	font-size: 24px;
-	line-height: 33px;
+	font-size: 16px;
+	line-height: 1;
 	color: #FFFFFF;
-	padding: 0 44px;
+	padding: 0 20px;
 	background: #B5D8F8;
 	width: 390px;
 	display: flex;
@@ -127,12 +126,12 @@ div.detail-information-popup__td--first
 .detail-information-popup__td-last
 {
 	font-weight: normal;
-	font-size: 24px;
-	line-height: 120px;
+	font-size: 18px;
+	line-height: 54px;
 	color: #424242;
 	width: 133px;
 	text-align: center;
-	height: 120px;
+	height: 54px;
 }
 .detail-information-popup__tr--first
 {
@@ -143,24 +142,24 @@ div.detail-information-popup__td--first
 {
 	background: #89AFCE;
 	font-weight: 600;
-	font-size: 30px;
+	font-size: 18px;
 	font-family: $second-font;
-	height: 120px;
-	line-height: 120px;
+	height: 72px;
+	line-height: 72px;
 	color: #FFFFFF;
-	padding-left: 60px;
+	padding-left: 40px;
 	margin-bottom: 20px;
 }
 .detail-information-popup__size-bot
 {
-	padding: 50px 60px;
+	padding: 40px;
 	padding-bottom: 10px;
 	background: #F2F5F8;
 	p
 	{
 		font-weight: normal;
-		font-size: 24px;
-		line-height: 33px;
+		font-size: 18px;
+		line-height: 1;
 		margin: 0;
 		margin-bottom: 40px;
 	}
@@ -169,8 +168,8 @@ div.detail-information-popup__td--first
 {
 	font-family: $second-font;
 	font-weight: 600;
-	font-size: 30px;
-	line-height: 33px;
+	font-size: 24px;
+	line-height: 1;
 	color: #424242;
 	margin: 0;
 	margin-bottom: 40px;
