--- a/src/blocks/about-work/about-work.scss
+++ b/src/blocks/about-work/about-work.scss
@@ -6,11 +6,11 @@
 {
 	font-family: $second-font;
 	font-weight: 500;
-	font-size: 36px;
-	line-height: 39px;
+	font-size: 28px;
+	line-height: 1.2;
 	text-transform: uppercase;
 	margin: 0;
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 	span{color: #89AFCE;}
 }
 
