--- a/src/blocks/questions/questions.scss
+++ b/src/blocks/questions/questions.scss
@@ -73,8 +73,9 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 80px 80px 80px 180px;
+	padding: 50px 80px;
 	width: 100%;
+	border-radius: 35px;
 	background-image: url('img/bg.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
@@ -85,11 +86,11 @@
 {
 	font-family: $second-font;
 	font-weight: 600;
-	font-size: 24px;
+	font-size: 20px;
 	line-height: 160%;
 	max-width: 560px;
 	margin: 0;
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 	color: white;
 	margin-right: auto;
 	text-transform: uppercase;
@@ -97,11 +98,11 @@
 .questions__descr
 {
 	font-weight: normal;
-	font-size: 24px;
-	line-height: 33px;
+	font-size: 20px;
+	line-height: 1.3;
 	color: white;
 	margin: 0;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 	text-align: left;
 	width: 100%;
 }
@@ -110,7 +111,11 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	grid-gap: 50px;
+	// grid-gap: 50px;
+	.g-radio
+	{
+		margin-bottom: 30px;
+	}
 }
 .questions__label
 {
@@ -155,7 +160,7 @@
 		font-size: 18px;
 		height: 60px;
 		line-height: 60px;
-		padding: 0 50px;
+		padding: 0 30px;
 		&::placeholder
 		{
 			font-weight: normal;
